k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: biochubs
  labels:
    name: biochubs
    app: biochubs-api
